  specification. (Andrey)

- Fixed all implementations of ResultSet::isNull() to check whether the current
  position is on a real row, not isBeforeFirst() nor isAfterLast(), like all
  getXXX methods do. (Andrey)

- Implementation for MySQL_DatabaseMetaData::getProcedures() when
  INFORMATION_SCHEMA is asked not to be used. (Andrey)


Alpha  1.0.3 - 2009-03-03

- Added new tests at test/unit/classes. Those tests are mostly about
  code coverage. Most of the actual functionality of the driver is tested
  by the tests found at test/CJUnitPort. (Ulf)

- New data types added to the list returned by DatabaseMetaData::getTypeInfo();
  FLOAT UNSIGED, DECIMAL UNSIGNED, DOUBLE UNSIGNED. Those tests may not
  be in the JDBC specification. However, due to the change you should be able
  to look up every type and type name returned by, for example,
  ResultSetMetaData::getColumnTypeName(). (Andrey)

- MySQL_Driver::getPatchVersion introducted. (Andrey)

- Major performance improvements due to new buffered resultset implementation
  by Andrey. (Ulf)

- Addition of test/unit/README with instructions for writing bug/regression
  tests. (Ulf)

- Experimental support for STLPort. This feature may be removed again at any
  time later without prior warning! Check cmake -L for configuration
  instructions. (Andrey)

- Fixed a bug in MySQL_PreparedResultSet::getString(). Returned string had real
  data but the length was random. Now, the string is initialized with correct
  length and thus is binary safe. (Andrey)

- Added properties-enabled (map of key->value) methods for connecting, which
  add many connect options. (Andrey)
  -- Driver::connect( map )
  -- Connection::Connection( map )

- New BLOB implementation. Got rid of sql::Blob in favor of std::istream. C++'s
  IOStream library is very powerful, similar to PHP's streams. It makes no sense
  to reinvent the wheel. For example one can pass a std::istringstream object